# job-outreach-assistant

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260718_0001_initial.py  20260719_0002_job_quality.py
app/: __init__.py  ai.py  api.py  cli.py  config.py  db.py  domain.py  ingest.py  integrations.py  models.py  pipeline.py  quotas.py  research.py  security.py
data/: README.md  profile.example.md
docs/: HANDOFF.md  IMPLEMENTATION_PLAN.md  OPERATIONS.md
docs/superpowers/plans/: 2026-07-19-clean-job-workflow.md  2026-07-19-workflow-progress-and-grounded-research.md
docs/superpowers/specs/: 2026-07-19-clean-job-workflow-design.md  2026-07-19-workflow-progress-stream-design.md
evals/fixtures/: contracts.json
scripts/: cron.example
tests/: test_ai.py  test_api.py  test_cli.py  test_db.py  test_domain.py  test_ingest.py  test_integrations.py  test_pipeline.py  test_research.py  test_security.py
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  styles.css
