[project]
name = "job-outreach-assistant"
version = "0.1.0"
description = "Local-first job and professional outreach research assistant"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "Althaaf Nuhaad" }]
dependencies = [
  "alembic>=1.15,<2",
  "beautifulsoup4>=4.13,<5",
  "fastapi>=0.115,<1",
  "google-api-python-client>=2.170,<3",
  "google-auth-oauthlib>=1.2,<2",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.9,<3",
  "pypdf>=5.5,<6",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
job-outreach = "app.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "pytest-httpx>=0.35,<1",
  "ruff>=0.11,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
strict = true
